[gd_scene load_steps=10 format=3 uid="uid://qyn6liw0mnc7"]

[ext_resource type="Script" uid="uid://u2ef3wbucknr" path="res://src/menus/shop/weapon_stock.gd" id="1_8mnww"]
[ext_resource type="Texture2D" uid="uid://dipdng1cgkbv7" path="res://assets/sprites/weapons/Minigun.png" id="1_xut4s"]
[ext_resource type="Texture2D" uid="uid://d20uecugd115u" path="res://assets/ui/Circle.png" id="2_otfjf"]
[ext_resource type="Texture2D" uid="uid://jwcubcargkae" path="res://assets/ui/mouse_left.png" id="4_mewe8"]
[ext_resource type="Texture2D" uid="uid://dhqgx56eai1jp" path="res://assets/ui/Outline.png" id="4_otfjf"]
[ext_resource type="Texture2D" uid="uid://bho80euqy4w1y" path="res://assets/ui/Circle_No_outline.png" id="5_0yv6g"]
[ext_resource type="Texture2D" uid="uid://cw5u37ye6gmfs" path="res://assets/ui/mouse_right.png" id="5_kn2go"]

[sub_resource type="Gradient" id="Gradient_8mnww"]
interpolation_color_space = 1
offsets = PackedFloat32Array(0.26087, 0.634271, 1)
colors = PackedColorArray(0, 1, 0.0833333, 1, 1, 0.909848, 0.261386, 1, 1, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_xut4s"]
interpolation_color_space = 1
colors = PackedColorArray(1, 0, 0, 1, 0.0166667, 1, 0, 1)

[node name="WeaponStock" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("1_8mnww")
price_gradient = SubResource("Gradient_8mnww")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(141.37, 40)
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 13.0
offset_top = -11.0
offset_right = 53.0
offset_bottom = 29.0
scale = Vector2(2.88334, 2.88334)
texture = ExtResource("2_otfjf")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xut4s")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -31.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "BUY"

[node name="left" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 7.0
offset_right = 50.0
offset_bottom = 42.0
mouse_filter = 2
texture = ExtResource("4_mewe8")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Control/left"]
modulate = Color(1, 1, 1, 0.647059)
show_behind_parent = true
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 35.0
offset_bottom = 39.0
texture = ExtResource("5_0yv6g")
expand_mode = 1

[node name="right" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 89.0
offset_top = 8.0
offset_right = 123.0
offset_bottom = 42.0
mouse_filter = 2
texture = ExtResource("5_kn2go")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Control/right"]
modulate = Color(1, 1, 1, 0.647059)
show_behind_parent = true
offset_left = 1.0
offset_top = -1.0
offset_right = 35.0
offset_bottom = 39.0
texture = ExtResource("5_0yv6g")
expand_mode = 1

[node name="ColorRect" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
expand_mode = 1

[node name="ColorRect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.29)
size_flags_horizontal = 3
mouse_filter = 2
mouse_default_cursor_shape = 2
texture = ExtResource("4_otfjf")
expand_mode = 1

[node name="Line2D2" type="Line2D" parent="ColorRect"]
position = Vector2(4, 2)
points = PackedVector2Array(0, 0, 0, 0, 48, 44, 127, 58, 180, 14, 309, 39, 387, 57, 495, 31, 529, 14, 619, 46, 697, 57, 737, 20, 775, 48, 816, 61, 851, 24, 883, 50)
width = 3.48
default_color = Color(0, 0, 0, 0.780392)

[node name="Line2D" type="Line2D" parent="ColorRect"]
points = PackedVector2Array(0, 0, 0, 0, 48, 44, 127, 58, 180, 14, 309, 39, 387, 57, 495, 31, 529, 14, 619, 46, 697, 57, 737, 20, 775, 48, 816, 61, 851, 24, 883, 50)
width = 3.48
gradient = SubResource("Gradient_xut4s")

[node name="HoveredTime" type="ColorRect" parent="ColorRect"]
visible = false
custom_minimum_size = Vector2(2, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
mouse_filter = 2
color = Color(0.000113828, 0.000113828, 0.000113828, 1)

[node name="ColorRect" type="ColorRect" parent="ColorRect/HoveredTime"]
show_behind_parent = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0.23, 0.23, 0.23, 0.592157)

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_color_rect_mouse_exited"]
